--- a/index.html
+++ b/index.html
@@ -8,5 +8,15 @@
     <header>
         <h1>Discover hidden places in the world around you</h1>
         <p><a>Download Excursion (Coming soon!)</a></p>
+        <!-- <p><video src="resources/videos/excursion.mp4" autoplay></video></p> -->
     </header>
+    <video src="resources/videos/excursion.mp4" type="video/mp4" autoplay loop></video>
+    <h1 id="g">Your personal travel guide</h1>
+    <h2>Excursion remembers places you like, and recommends new points of interest around you.</h2>
+<p><img src="resources/images/camp.jpg"></p>
+<p><img src="resources/images/phone.png"></p>
+
+<h1>Coming Soon for iPhone and Android</h1>
+<p><a>Download Excursion (Coming soon!)</a></p>
+<span><h3>© Excursion</h3></span>
 </body>
