--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
 
 <h1>Coming Soon for iPhone and Android</h1>
 <p><a>Download Excursion (Coming soon!)</a></p>
-<span><h3>© Excursion</h3></span>
 </body>
+<footer>
+    <span><h3>© Excursion</h3></span>
+</footer>
