--- a/index.html
+++ b/index.html
@@ -20,5 +20,5 @@
 <p><a>Download Excursion (Coming soon!)</a></p>
 </body>
 <footer>
-    <span><h3>© Excursion</h3></span>
+    <h3>© Excursion</h3>
 </footer>
